2009-09-09  Andrew Haley  <aph@redhat.com>

	* NEWS: Update for 1.6.

2009-09-10  Andrew John Hughes  <ahughes@redhat.com>

	* INSTALL: Update documentation to reflect recent changes and add
	Shark requirements.

2009-09-10  Andrew Haley  <aph@redhat.com>

        * Makefile.am, patches/icedtea-jar-misc.patch: Import patch from
        upstream OpenJDK 6.
        http://hg.openjdk.java.net/jdk6/jdk6/jdk/rev/b35f1e5075a4

2009-09-09  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/stack_zero.hpp
	(ZeroFrame::identify_word): New method.
	(ZeroFrame::identify_vp_word): Likewise.
	
	* ports/hotspot/src/cpu/zero/vm/entryFrame_zero.hpp
	(EntryFrame::identify_word): New method.
	* ports/hotspot/src/cpu/zero/vm/interpreterFrame_zero.hpp
	(InterpreterFrame::identify_word): New method.
	* ports/hotspot/src/cpu/zero/vm/sharkFrame_zero.hpp
	(SharkFrame::identify_word): New method.
	* ports/hotspot/src/cpu/zero/vm/deoptimizerFrame_zero.hpp
	(DeoptimizerFrame::identify_word): Likewise.

	* ports/hotspot/src/cpu/zero/vm/frame_zero.hpp
	(frame::frame): Added frame pointer argument.
	(frame::_fp): New field.
	(frame::fp): Return the above, instead of a dummy value.
	(frame::zero_print_on_error): New method.
	* ports/hotspot/src/cpu/zero/vm/frame_zero.inline.hpp
	(frame::frame): Initialize frame pointer.
	* ports/hotspot/src/cpu/zero/vm/frame_zero.cpp
	(frame::sender_for_entry_frame): Pass frame pointer.
	(frame::sender_for_interpreter_frame): Likewise.
	(frame::sender_for_compiled_frame): Likewise.
	(frame::sender_for_deoptimizer_frame): Likewise.
	(frame::zero_print_on_error): New method.
	(ZeroFrame::identify_word): Likewise.
	(EntryFrame::identify_word): Likewise.
	(InterpreterFrame::identify_word): Likewise.
	(SharkFrame::identify_word): Likewise.
	(ZeroFrame::identify_vp_word): Likewise.
	(DeoptimizerFrame::identify_word): Likewise.

	* ports/hotspot/src/os_cpu/linux_zero/vm/thread_linux_zero.hpp
	(JavaThread::pd_last_frame): Pass frame pointer.
