@@ -30,6 +30,14 @@ NPPLUGIN_DIR =
 endif
 endif
 
+if WITH_VISUALVM
+NB_PLATFORM= $(shell ls /usr/share/netbeans | grep platform | tail -n1)
+NB_APISUPPORT=$(shell ls /usr/share/netbeans | grep apisupport | tail -n1)
+else
+NB_PLATFORM=
+NB_APISUPPORT=
+endif
+
 if ENABLE_PULSE_JAVA
 # include the makefile in pulseaudio subdir
 PULSE_JAVA_DIR = $(abs_top_srcdir)/pulseaudio
@@ -1190,7 +1198,7 @@ if WITH_VISUALVM
 	  $(BUILD_OUTPUT_DIR)/j2sdk-image/lib/visualvm/etc/visualvm.clusters ; \
 	cp -r visualvm/build/cluster/* \
 	  $(BUILD_OUTPUT_DIR)/j2sdk-image/lib/visualvm/visualvm ; \
-	cp -r netbeans/nbbuild/netbeans_visualvm/platform9 \
+	cp -r netbeans/nbbuild/netbeans_visualvm/$(NB_PLATFORM) \
 	  $(BUILD_OUTPUT_DIR)/j2sdk-image/lib/visualvm ; \
 	cp -r netbeans/nbbuild/netbeans_visualvm/profiler3 \
 	  $(BUILD_OUTPUT_DIR)/j2sdk-image/lib/visualvm	
@@ -1275,7 +1283,7 @@ if WITH_VISUALVM
 	  $(BUILD_OUTPUT_DIR)/j2sdk-image/lib/visualvm/etc/visualvm.clusters ; \
 	cp -r visualvm/build/cluster/* \
 	  $(BUILD_OUTPUT_DIR)/j2sdk-image/lib/visualvm/visualvm ; \
-	cp -r netbeans/nbbuild/netbeans_visualvm/platform9 \
+	cp -r netbeans/nbbuild/netbeans_visualvm/$(NB_PLATFORM) \
 	  $(BUILD_OUTPUT_DIR)/j2sdk-image/lib/visualvm ; \
 	cp -r netbeans/nbbuild/netbeans_visualvm/profiler3 \
 	  $(BUILD_OUTPUT_DIR)/j2sdk-image/lib/visualvm
@@ -2033,8 +2041,8 @@ if WITH_VISUALVM
 	cd netbeans ; \
         rm nbbuild/external/binaries-list ; \
 	mkdir -p ./nbbuild/netbeans_visualvm/ ; \
-	ln -s $(SYSTEM_NETBEANS_DIR)/platform9/ ./nbbuild/netbeans_visualvm/platform9 ; \
-	ln -s $(SYSTEM_NETBEANS_DIR)/apisupport1/ ./nbbuild/netbeans_visualvm/apisupport1 ; \
+	ln -s $(SYSTEM_NETBEANS_DIR)/$(NB_PLATFORM)/ ./nbbuild/netbeans_visualvm/$(NB_PLATFORM) ; \
+	ln -s $(SYSTEM_NETBEANS_DIR)/$(NB_APISUPPORT)/ ./nbbuild/netbeans_visualvm/$(NB_APISUPPORT) ; \
 	ln -s $(SYSTEM_NETBEANS_DIR)/harness/ ./nbbuild/netbeans_visualvm/harness ; \
 	if ! (uname -a | grep x86_64) ; then \
 	  mkdir -p lib.profiler/release/lib/deployed/jdk15/linux ; \
