@@ -1,3 +1,9 @@
+2009-09-09  Lillian Angel  <langel@redhat.com>
+
+	* Makefile.am: Added NB_PLATFORM and NB_APISUPPORT to determine
+	current versions to use. This will prevent future failures whenever
+	NetBeans is updated.
+
 2009-09-09  Andrew Haley  <aph@redhat.com>
 
 	* NEWS: Update for 1.6.
